bk_ida/gccida/c3/print_rtl_with_bb
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_with_bb/src/cfgrtl.c:1965:4: error: expected ';' after expression
rtx i; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_with_bb/src/cfgrtl.c:1965:5: error: use of undeclared identifier 'i'
rtx i; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_with_bb/src/cfgrtl.c:2045:7: error: use of undeclared identifier 'i'
for ( i = cfun->epilogue_delay_list; i; i = ( rtx)i[1] ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_with_bb/src/cfgrtl.c:2045:38: error: use of undeclared identifier 'i'
for ( i = cfun->epilogue_delay_list; i; i = ( rtx)i[1] ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_with_bb/src/cfgrtl.c:2045:41: error: use of undeclared identifier 'i'
for ( i = cfun->epilogue_delay_list; i; i = ( rtx)i[1] ) 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_with_bb/src/cfgrtl.c:2045:51: error: expected ')'
for ( i = cfun->epilogue_delay_list; i; i = ( rtx)i[1] ) 
                                                  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_with_bb/src/cfgrtl.c:2045:5: note: to match this '('
for ( i = cfun->epilogue_delay_list; i; i = ( rtx)i[1] ) 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_with_bb/src/cfgrtl.c:2046:25: error: use of undeclared identifier 'i'
print_rtl_single( outf, i->fld[0].rtx); 
                        ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/print_rtl_with_bb/src/obj/cfgrtl.o] Error 1
